--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
                         <br>
                         <br>
 
-                        <h4>I am Arvid Quarshie , a Software Engineer who strives to change and inspire others through programming.</h4>
+                        <h4>I am Arvid Quarshie , a Software Developer who's main purpose in life is to inspire and change the lives of others through programming.</h4>
 
 
 
                         <br>
                         <br>
 
-                        <h4><u>"Veni Vidi Vici"</u> </h4>
+
 
 
                     </div>
@@ -68,57 +68,63 @@
         </div>
     </div>
     <div class="portfolio">
-        <br>
-        <br>
         <h1>Portfolio</h1>
-
-        <div class="row">
-            <div class="wrap">
-                <div class="row">
-
-
-
-                </div>
-
-
-                <div class="row">
-
-                    <div class="col-1-4">
-                        <div class="show show-first">
-                            <img src="/img/AfricanImprint.png" />
-
-                            <div class="mask">
-                                <h2>Imprints</h2>
-
-                                <a href="#" class="more">More info</a>
-                            </div>
-
-                        </div>
-
-                    </div>
-
-                    <div class="col-1-4">
-                        <div class="show show-second">
-                            <img src="./img/whiplash.png" />
-
-                            <div class="mask">
-                                <h2>Whiplash</h2>
-
-                                <a href="#" class="more">More info</a>
-                            </div>
-
-                        </div>
-
-                    </div>
-
-                    <div class="mobile-clear"></div>
-
-
-                </div>
-
+        <div class="image-container image-container-num1">
+            <div class="image image-num1">
+                <img src="./images/surf.jpg" />
             </div>
-
+            <div class="caption caption-num1">
+                <span class="bottom">There's<br>always a siren</span>
+            </div>
         </div>
+        <br class="break">
+        <div class="image-container image-container-num2">
+            <div class="image image-num2">
+                <img src="./images/naked.jpg" />
+            </div>
+            <div class="caption caption-num2">
+                Singing you to shipwreck
+            </div>
+        </div>
+        <br class="break">
+        <div class="image-container image-container-num3">
+            <div class="image image-num3">
+                <img src="./images/fashion.jpg" />
+            </div>
+            <br class="break">
+            <div class="caption caption-num3">
+                Steer away from these rocks
+            </div>
+        </div>
+        <br class="break">
+        <div class="image-container image-container-num4">
+            <div class="image image-num4">
+                <img src="./images/boat.jpg" />
+            </div>
+            <div class="caption caption-num4">
+                We'd be a walking disaster
+            </div>
+            <br class="break">
+        </div>
+        <br class="break">
+        <div class="image-container image-container-num5">
+            <div class="image image-num5">
+                <img src="http://lorempixel.com/g/300/300/abstract/" />
+            </div>
+            <div class="caption caption-num5">
+                Just 'cause you feel it
+            </div>
+        </div>
+        <br class="break">
+        <div class="image-container image-container-num6">
+            <div class="image image-num6">
+                <img src="http://lorempixel.com/g/200/200/people/" />
+            </div>
+            <div class="caption caption-num6">
+                Doesn't mean it's there.
+            </div>
+        </div>
+
     </div>
 
 
@@ -168,13 +174,17 @@
                     <i class="fa fa-facebook-square" aria-hidden="true"></i><a href="www.facebook.com"><h5>Facebook</h5></a>
                     <i class="fa fa-twitter-square" aria-hidden="true"></i><a href="www.twitter.com"><h5>Twitter</h5></a>
                     <i class="fa fa-github" aria-hidden="true"></i><a href="www.github.com"><h5>Github:ArvidQuarshie</h5></a>
-                    <a href="http://arvidquarshie.github.io/blog/"><h5>Blog</h5></a>
+                    <i class="fa fa-newspaper-o" aria-hidden="true"></i>
+                    <a href="http://arvidquarshie.github.io/blog/">
+
+                        <h5>Blog</h5></a>
 
                     <br>
                     <br>
                     <h2>Email me</h2>
 
 
+                    <!--
                     <form id="contact" action="https://formspree.io/arvidquarshie@gmail.com" method="post">
                         <div class="left">
                             <input type="text" placeholder="Name" required="required" name="name" />
@@ -189,7 +199,7 @@
                                 <h5>Send</h5></button>
                         </div>
                     </form>
-
+-->
                 </ul>
             </div>
             <div class="small-6 large-4 columns">
@@ -197,7 +207,30 @@
             </div>
         </div>
 
+        <div class="form">
+            <div class="row">
+                <form id="contact" action="https://formspree.io/arvidquarshie@gmail.com" method="post">
+                    <div class="left">
+                        <input type="text" placeholder="Name" required="required" name="name" />
+                        <input type="email" placeholder="Email" required="required" name="email" />
+                        <input type="text" placeholder="Subject" required="required" name="subject" />
+                    </div>
+                    <div class="right">
+                        <textarea placeholder="Message" required="required" name="textarea"></textarea>
+                    </div>
+                    <div class="send-button cl">
+                        <button type="submit">
+                            <h5>Send</h5></button>
+                    </div>
+                </form>
+
+            </div>
+
+
+        </div>
+
     </div>
+
 
 
 
