edited the contacts section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <h1>Hey...</h1>
 
 
-                        <br>
+
                         <br>
                         <br>
                         <br>
@@ -174,8 +174,8 @@
                 <br>
                 <br>
                 <ul>
-                    <i class="fa fa-facebook-square" aria-hidden="true"></i><a href="www.facebook.com"><h5>Facebook</h5></a>
-                    <i class="fa fa-twitter-square" aria-hidden="true"></i><a href="www.twitter.com"><h5>Twitter</h5></a>
+                    <i class="fa fa-facebook-square" aria-hidden="true"></i><a href="www.facebook.com"><h5>ArvidQuarshie</h5></a>
+                    <i class="fa fa-twitter-square" aria-hidden="true"></i><a href="www.twitter.com"><h5>@quarshie_arvid</h5></a>
                     <i class="fa fa-github" aria-hidden="true"></i><a href="www.github.com"><h5>Github:ArvidQuarshie</h5></a>
                     <i class="fa fa-newspaper-o" aria-hidden="true"></i>
                     <a href="http://arvidquarshie.github.io/blog/">
