--- a/index.html
+++ b/index.html
@@ -70,48 +70,22 @@
     <div class="portfolio">
         <h1>Portfolio</h1>
 
-        <br class="break">
-        <div class="image-container image-container-num2">
-            <div class="image image-num2">
-                <img src="./images/naked.jpg" />
-            </div>
-            <div class="caption caption-num2">
-                Singing you to shipwreck
-            </div>
-        </div>
-        <br class="break">
-        <div class="image-container image-container-num3">
-            <div class="image image-num3">
-                <img src="./images/fashion.jpg" />
-            </div>
-            <br class="break">
-            <div class="caption caption-num3">
-                Steer away from these rocks
-            </div>
-        </div>
-        <br class="break">
-        <div class="image-container image-container-num4">
-            <div class="image image-num4">
-                <img src="./images/boat.jpg" />
-            </div>
-            <div class="caption caption-num4">
-                We'd be a walking disaster
-            </div>
-            <br class="break">
-        </div>
-        <br class="break">
-        <div class="image-container image-container-num5">
-            <div class="image image-num5">
-                <img src="http://lorempixel.com/g/300/300/abstract/" />
-            </div>
-            <div class="caption caption-num5">
-                Just 'cause you feel it
-            </div>
-        </div>
+
+
         <br class="break">
         <div class="image-container image-container-num6">
             <div class="image image-num6">
-                <img src="http://lorempixel.com/g/200/200/people/" />
+                <img src="./img/whiplash.png" />
+            </div>
+            <div class="caption caption-num6">
+                Doesn't mean it's there.
+            </div>
+        </div>
+
+        <br class="break">
+        <div class="image-container image-container-num6">
+            <div class="image image-num6">
+                <img src="./img/AfricanImprint.png" />
             </div>
             <div class="caption caption-num6">
                 Doesn't mean it's there.
