--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link href='https://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
 
 
 </head>
@@ -78,7 +80,6 @@
                 <img src="./img/whiplash.png" />
             </div>
             <div class="caption caption-num6">
-                Doesn't mean it's there.
             </div>
         </div>
 
@@ -133,7 +134,7 @@
             <div class="small-2 large-4 columns">
                 <br>
             </div>
-            <div class="small-4 large-4 columns">
+            <div class="small-4 large-4 columns profile">
                 <br>
                 <br>
                 <br>
@@ -141,13 +142,21 @@
                 <br>
                 <br>
                 <ul>
-                    <i class="fa fa-facebook-square" aria-hidden="true"></i><a href="www.facebook.com"><h5>ArvidQuarshie</h5></a>
-                    <i class="fa fa-twitter-square" aria-hidden="true"></i><a href="www.twitter.com"><h5>@quarshie_arvid</h5></a>
-                    <i class="fa fa-github" aria-hidden="true"></i><a href="www.github.com"><h5>Github:ArvidQuarshie</h5></a>
-                    <i class="fa fa-newspaper-o" aria-hidden="true"></i>
-                    <a href="http://arvidquarshie.github.io/blog/">
 
-                        <h5>Blog</h5></a>
+                    <li>
+                        <a href="http://www.facebook.com/ArvidQuarshie"> <i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i></a>
+                    </li>
+                    <li>
+                        <a href="http://www.twitter.com/quarshie_arvid"> <i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i></a>
+                    </li>
+                    <li> <a href="http://www.github.com/ArvidQuarshie"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+                    </li>
+                    <li>
+                        <a href="http://arvidquarshie.github.io/blog/">
+                            <i class="fa fa-newspaper-o fa-3x" aria-hidden="true"></i>
+
+                        </a>
+                    </li>
 
                     <br>
                     <br>
