changed the contact and addd footer

--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
 
     </div>
     <div class="contacts">
+        <!--
         <div class="row">
             <div class="small-2 large-4 columns">
                 <br>
@@ -161,10 +162,12 @@
 
                         </a>
                     </li>
+</ul>
 
                     <br>
                     <br>
                     <h2>Email me</h2>
+
 
 
 
@@ -187,18 +190,85 @@
 
 
                 </ul>
+
+
+                <div class="small-6 large-4 columns">
+                    <br>
+                </div>
+            </div>
+
+
+
+        </div>
+-->
+        <div class="row">
+            <div class="large-3 columns">
+                <br>
+            </div>
+            <div class="large-6 columns">
+                <h1>REach Out!!</h1>
+                <form action="">
+
+                    <input type="text" placeholder="Name" name="name" required>
+
+                    <input type="email" placeholder="Email" name="email" required>
+
+                    <textarea placeholder="Message" name="message" required></textarea>
+
+                    <div class="captcha">
+                        <input type="text" placeholder="Answer" name="captcha" required>
+                        <input type="text" value="2 + 3 =" name="question" required readonly>
+                    </div>
+
+                    <input type="submit" value="Send">
+
+                </form>
+                <br>
+            </div>
+            <div class="large-3 columns">
+                <br>
+            </div>
+        </div>
+
+
+    </div>
+
+    <div class="footer">
+        <div class="row">
+            <div class="small-2 large-4 columns">
+                <br>
+            </div>
+            <div class="small-4 large-4 columns">
+
+
+
+                <a href="http://www.facebook.com/ArvidQuarshie"> <i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i></a>
+
+
+                <a href="http://www.twitter.com/quarshie_arvid"> <i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i></a>
+
+                <a href="http://www.github.com/ArvidQuarshie"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+
+
+                <a href="http://arvidquarshie.github.io/blog/">
+                    <i class="fa fa-newspaper-o fa-3x" aria-hidden="true"></i>
+
+                </a>
+                <a href="https://www.linkedin.com/in/arvid-quarshie-24a530120?trk=hp-identity-name"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
+                <br>
+
+                <i class="fa fa-copyright" aria-hidden="true"></i>2016
+
+
+
+
             </div>
             <div class="small-6 large-4 columns">
                 <br>
             </div>
         </div>
 
-
-
     </div>
-
-
-
 
 
 
