--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     <div class="portfolio">
         <h1>Portfolio</h1>
 
+        <!--
 
 
         <br class="break">
@@ -96,6 +97,31 @@
                 Doesn't mean it's there.
             </div>
         </div>
+
+-->
+
+        <figure class="snip1524">
+            <img src="./img/AfricanImprint.png" />
+            <figcaption>
+                <h2>Quiche Hollandaise</h2>
+                <p>Weekends don't count unless you spend them doing something completely pointless.</p>
+            </figcaption>
+            <a href="#"></a>
+        </figure>
+        <figure class="snip1524"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample27.jpg" alt="sample27" />
+            <figcaption>
+                <h2>Ingredia Nutrisha</h2>
+                <p>A voice crackles in Calvin's radio: 'Enemy fighters at two o'clock!, 'Roger. What should I do until then?'</p>
+            </figcaption>
+            <a href="#"></a>
+        </figure>
+        <figure class="snip1524"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample28.jpg" alt="sample28" />
+            <figcaption>
+                <h2>Eric Widget</h2>
+                <p>The only skills I have the patience to learn are those that have no real application in life. </p>
+            </figcaption>
+            <a href="#"></a>
+        </figure>
 
     </div>
 
