added contact file

--- a/index.html
+++ b/index.html
@@ -160,6 +160,29 @@
 
     </div>
     <div class="contacts">
+        <h2>Contact Form</h2>
+
+        <form action="">
+
+            <input type="text" placeholder="Name" name="name" required>
+
+            <input type="email" placeholder="Email" name="email" required>
+
+            <textarea placeholder="Message" name="message" required></textarea>
+
+            <!--
+            <div class="captcha">
+                <input type="text" placeholder="Answer" name="captcha" required>
+                <input type="text" value="2 + 3 =" name="question" required readonly>
+            </div>
+-->
+
+            <input type="submit" value="Send">
+
+        </form>
+
+
+
         <!--
         <div class="row">
             <div class="small-2 large-4 columns">
@@ -227,6 +250,7 @@
 
         </div>
 -->
+        <!--
         <div class="row">
             <div class="large-3 columns">
                 <br>
@@ -255,6 +279,8 @@
                 <br>
             </div>
         </div>
+-->
+
 
 
     </div>
