changed the landing

--- a/index.html
+++ b/index.html
@@ -30,36 +30,15 @@
 
 
                 <div class="row hey">
-                    <div class="small-2 large-4 columns">
+                    <div class="small-6 large-2 columns">
+                        <br>
+                    </div>
+                    <div class="small-6 large-8 columns">
+                        <h1> Hi my name is Arvid Quarshie and Software Engineering is my passion.</h1></div>
+                    <div class="small-12 large-2 columns">
                         <br>
                     </div>
 
-                    <div class="small-4 large-4 columns">
-                        <br>
-                        <br>
-                        <h1>Hey...</h1>
-
-
-
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-
-                        <h4>I am Arvid Quarshie , a Software Developer who's main purpose in life is to inspire and change the lives of others through programming.</h4>
-
-
-
-                        <br>
-                        <br>
-
-
-
-
-                    </div>
-                    <div class="small-6 large-4 columns">
-                        <br>
-                    </div>
                 </div>
                 <div class="large-3 columns">
                     <br>
@@ -75,53 +54,50 @@
     </div>
     <div class="portfolio">
         <h1>Portfolio</h1>
+        <div class="row">
 
-        <!--
-
-
-        <br class="break">
-        <div class="image-container image-container-num6">
-            <div class="image image-num6">
-                <img src="./img/whiplash.png" />
-            </div>
-            <div class="caption caption-num6">
+            <div class="small-12 large-2 columns">
+                <br>
             </div>
         </div>
 
-        <br class="break">
-        <div class="image-container image-container-num6">
-            <div class="image image-num6">
-                <img src="./img/AfricanImprint.png" />
+        <div class="row">
+            <div class="large-6 columns">
+                <figure class="snip1524">
+                    <img src="./img/AfricanImprint.png" />
+                    <figcaption>
+                        <h2>Quiche Hollandaise</h2>
+                        <p>Weekends don't count unless you spend them doing something completely pointless.</p>
+                    </figcaption>
+                    <a href="#"></a>
+                </figure>
+                <figure class="snip1524"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample27.jpg" alt="sample27" />
+                    <figcaption>
+                        <h2>Ingredia Nutrisha</h2>
+                        <p>A voice crackles in Calvin's radio: 'Enemy fighters at two o'clock!, 'Roger. What should I do until then?'</p>
+                    </figcaption>
+                    <a href="#"></a>
+                </figure>
             </div>
-            <div class="caption caption-num6">
-                Doesn't mean it's there.
+            <div class="large-6 columns">
+                <figure class="snip1524">
+                    <img src="./img/AfricanImprint.png" />
+                    <figcaption>
+                        <h2>Quiche Hollandaise</h2>
+                        <p>Weekends don't count unless you spend them doing something completely pointless.</p>
+                    </figcaption>
+                    <a href="#"></a>
+                </figure>
+                <figure class="snip1524"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample27.jpg" alt="sample27" />
+                    <figcaption>
+                        <h2>Ingredia Nutrisha</h2>
+                        <p>A voice crackles in Calvin's radio: 'Enemy fighters at two o'clock!, 'Roger. What should I do until then?'</p>
+                    </figcaption>
+                    <a href="#"></a>
+                </figure>
             </div>
         </div>
 
--->
-
-        <figure class="snip1524">
-            <img src="./img/AfricanImprint.png" />
-            <figcaption>
-                <h2>Quiche Hollandaise</h2>
-                <p>Weekends don't count unless you spend them doing something completely pointless.</p>
-            </figcaption>
-            <a href="#"></a>
-        </figure>
-        <figure class="snip1524"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample27.jpg" alt="sample27" />
-            <figcaption>
-                <h2>Ingredia Nutrisha</h2>
-                <p>A voice crackles in Calvin's radio: 'Enemy fighters at two o'clock!, 'Roger. What should I do until then?'</p>
-            </figcaption>
-            <a href="#"></a>
-        </figure>
-        <figure class="snip1524"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample28.jpg" alt="sample28" />
-            <figcaption>
-                <h2>Eric Widget</h2>
-                <p>The only skills I have the patience to learn are those that have no real application in life. </p>
-            </figcaption>
-            <a href="#"></a>
-        </figure>
 
     </div>
 
