--- a/index.html
+++ b/index.html
@@ -27,13 +27,38 @@
         <div class="row" id="landing">
 
             <div class="overlay">
+                <div class="top-bar">
+                    <div class="top-bar-left">
+                        <ul class="dropdown menu" data-dropdown-menu>
+                            <li class="menu-text">ArvidQuarshie</li>
+                            <li>
+                                <a href="#port"><h5>Portfolio</h5></a>
+                                <ul class="menu vertical">
+                                    <li>
+                                        <a href="#"></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"></a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li><a href="#skil"><h5>Expertise</h5></a></li>
+                            <li><a href="#cont"><h5>Contact</h5></a></li>
+                        </ul>
+                    </div>
+
+                </div>
 
 
                 <div class="row hey">
+
                     <div class="small-6 large-2 columns">
                         <br>
                     </div>
-                    <div class="small-6 large-8 columns">
+                    <div class="small-6 large-8 columns intro">
                         <h1> Hi my name is Arvid Quarshie and Software Engineering is my passion.</h1></div>
                     <div class="small-12 large-2 columns">
                         <br>
@@ -52,7 +77,7 @@
             </div>
         </div>
     </div>
-    <div class="portfolio">
+    <div class="portfolio" id="port">
         <h1>Portfolio</h1>
         <div class="row">
 
@@ -62,8 +87,8 @@
         </div>
 
         <div class="row">
-            <div class="large-6 columns">
-                <figure class="snip1524">
+            <div class="large-6 columns ">
+                <figure class="snip1524 leftportfolio">
                     <img src="./img/AfricanImprint.png" />
                     <figcaption>
                         <h2>Quiche Hollandaise</h2>
@@ -104,7 +129,7 @@
 
 
 
-    <div class="skills">
+    <div class="skills" id="skil">
         <div class="row">
             <div class="small-2 large-4 columns">
                 <br>
@@ -135,7 +160,7 @@
         </div>
 
     </div>
-    <div class="contacts">
+    <div class="contacts" id="cont">
         <h2>Contact Form</h2>
 
         <form action="">
@@ -299,7 +324,10 @@
     </div>
 
 
-
+    <script src="js/vendor/jquery.js"></script>
+    <script src="js/vendor/what-input.js"></script>
+    <script src="js/vendor/foundation.js"></script>
+    <script src="js/app.js"></script>
 
 
 </body>
