--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <div class="contacts" id="cont">
         <h2>Contact Form</h2>
 
-        <form action="">
+        <form action="https://formspree.io/arvidquarshie@gmail.com" method="POST">
 
             <input type="text" placeholder="Name" name="name" required>
 
