--- a/index.html
+++ b/index.html
@@ -80,51 +80,90 @@
     <div class="portfolio" id="port">
         <h1>Portfolio</h1>
         <div class="row">
+            <div class="small-2 large-4 columns">
 
-            <div class="small-12 large-2 columns">
-                <br>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="large-6 columns ">
-                <figure class="snip1524 leftportfolio">
-                    <img src="./img/AfricanImprint.png" />
-                    <figcaption>
-                        <h2>Quiche Hollandaise</h2>
-                        <p>Weekends don't count unless you spend them doing something completely pointless.</p>
-                    </figcaption>
-                    <a href="#"></a>
-                </figure>
-                <figure class="snip1524"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample27.jpg" alt="sample27" />
-                    <figcaption>
-                        <h2>Ingredia Nutrisha</h2>
-                        <p>A voice crackles in Calvin's radio: 'Enemy fighters at two o'clock!, 'Roger. What should I do until then?'</p>
-                    </figcaption>
-                    <a href="#"></a>
-                </figure>
-            </div>
-            <div class="large-6 columns">
                 <figure class="snip1524">
-                    <img src="./img/AfricanImprint.png" />
+                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample26.jpg" alt="sample26" />
                     <figcaption>
                         <h2>Quiche Hollandaise</h2>
                         <p>Weekends don't count unless you spend them doing something completely pointless.</p>
                     </figcaption>
                     <a href="#"></a>
                 </figure>
-                <figure class="snip1524"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample27.jpg" alt="sample27" />
+            </div>
+            <div class="small-4 large-4 columns">
+                <figure class="snip1524">
+                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample26.jpg" alt="sample26" />
                     <figcaption>
-                        <h2>Ingredia Nutrisha</h2>
-                        <p>A voice crackles in Calvin's radio: 'Enemy fighters at two o'clock!, 'Roger. What should I do until then?'</p>
+                        <h2>Quiche Hollandaise</h2>
+                        <p>Weekends don't count unless you spend them doing something completely pointless.</p>
                     </figcaption>
                     <a href="#"></a>
                 </figure>
+
+            </div>
+            <div class="small-6 large-4 columns">
+                <figure class="snip1524">
+                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample26.jpg" alt="sample26" />
+                    <figcaption>
+                        <h2>Quiche Hollandaise</h2>
+                        <p>Weekends don't count unless you spend them doing something completely pointless.</p>
+                    </figcaption>
+                    <a href="#"></a>
+                </figure>
+
             </div>
         </div>
+
+
+
 
 
     </div>
+    <div class="portfolio2" id="port">
+
+        <div class="row">
+            <div class="small-2 large-4 columns">
+
+                <figure class="snip1524">
+                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample26.jpg" alt="sample26" />
+                    <figcaption>
+                        <h2>Quiche Hollandaise</h2>
+                        <p>Weekends don't count unless you spend them doing something completely pointless.</p>
+                    </figcaption>
+                    <a href="#"></a>
+                </figure>
+            </div>
+            <div class="small-4 large-4 columns">
+                <figure class="snip1524">
+                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample26.jpg" alt="sample26" />
+                    <figcaption>
+                        <h2>Quiche Hollandaise</h2>
+                        <p>Weekends don't count unless you spend them doing something completely pointless.</p>
+                    </figcaption>
+                    <a href="#"></a>
+                </figure>
+
+            </div>
+            <div class="small-6 large-4 columns">
+                <figure class="snip1524">
+                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample26.jpg" alt="sample26" />
+                    <figcaption>
+                        <h2>Quiche Hollandaise</h2>
+                        <p>Weekends don't count unless you spend them doing something completely pointless.</p>
+                    </figcaption>
+                    <a href="#"></a>
+                </figure>
+
+            </div>
+        </div>
+
+
+
+
+
+    </div>
+
 
 
 
