edited the portfolio section

--- a/index.html
+++ b/index.html
@@ -83,20 +83,20 @@
             <div class="small-2 large-4 columns">
 
                 <figure class="snip1524">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample26.jpg" alt="sample26" />
+                    <img src="./img/whiplash.png" alt="sample26" />
                     <figcaption>
-                        <h2>Quiche Hollandaise</h2>
-                        <p>Weekends don't count unless you spend them doing something completely pointless.</p>
+                        <h2>Whiplash</h2>
+
                     </figcaption>
                     <a href="#"></a>
                 </figure>
             </div>
             <div class="small-4 large-4 columns">
                 <figure class="snip1524">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample26.jpg" alt="sample26" />
+                    <img src="./img/AfricanImprint.png" />
                     <figcaption>
-                        <h2>Quiche Hollandaise</h2>
-                        <p>Weekends don't count unless you spend them doing something completely pointless.</p>
+                        <h2>African Imprint</h2>
+
                     </figcaption>
                     <a href="#"></a>
                 </figure>
@@ -104,10 +104,10 @@
             </div>
             <div class="small-6 large-4 columns">
                 <figure class="snip1524">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample26.jpg" alt="sample26" />
+                    <img src="./img/maps.jpg" />
                     <figcaption>
-                        <h2>Quiche Hollandaise</h2>
-                        <p>Weekends don't count unless you spend them doing something completely pointless.</p>
+                        <h2>Google PLaces</h2>
+
                     </figcaption>
                     <a href="#"></a>
                 </figure>
@@ -126,20 +126,20 @@
             <div class="small-2 large-4 columns">
 
                 <figure class="snip1524">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample26.jpg" alt="sample26" />
+                    <img src="./img/cover.jpg" alt="sample26" />
                     <figcaption>
-                        <h2>Quiche Hollandaise</h2>
-                        <p>Weekends don't count unless you spend them doing something completely pointless.</p>
+                        <h2>Music App</h2>
+
                     </figcaption>
                     <a href="#"></a>
                 </figure>
             </div>
             <div class="small-4 large-4 columns">
                 <figure class="snip1524">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample26.jpg" alt="sample26" />
+                    <img src="./img/crop.jpg" />
                     <figcaption>
-                        <h2>Quiche Hollandaise</h2>
-                        <p>Weekends don't count unless you spend them doing something completely pointless.</p>
+                        <h2>Camera and Crop </h2>
+
                     </figcaption>
                     <a href="#"></a>
                 </figure>
@@ -147,10 +147,10 @@
             </div>
             <div class="small-6 large-4 columns">
                 <figure class="snip1524">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample26.jpg" alt="sample26" />
+                    <img src="./img/android.png" alt="sample26" />
                     <figcaption>
-                        <h2>Quiche Hollandaise</h2>
-                        <p>Weekends don't count unless you spend them doing something completely pointless.</p>
+                        <h2>Video Player</h2>
+
                     </figcaption>
                     <a href="#"></a>
                 </figure>
@@ -222,104 +222,6 @@
         </form>
 
 
-
-        <!--
-        <div class="row">
-            <div class="small-2 large-4 columns">
-                <br>
-            </div>
-            <div class="small-4 large-4 columns profile">
-                <br>
-                <br>
-                <br>
-                <h1><u>Contact Me</u></h1>
-                <br>
-                <br>
-                <ul>
-
-                    <li>
-                        <a href="http://www.facebook.com/ArvidQuarshie"> <i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i></a>
-                    </li>
-                    <li>
-                        <a href="http://www.twitter.com/quarshie_arvid"> <i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i></a>
-                    </li>
-                    <li> <a href="http://www.github.com/ArvidQuarshie"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
-                    </li>
-                    <li>
-                        <a href="http://arvidquarshie.github.io/blog/">
-                            <i class="fa fa-newspaper-o fa-3x" aria-hidden="true"></i>
-
-                        </a>
-                    </li>
-</ul>
-
-                    <br>
-                    <br>
-                    <h2>Email me</h2>
-
-
-
-
-                    <form action="">
-
-                        <input type="text" placeholder="Name" name="name" required>
-
-                        <input type="email" placeholder="Email" name="email" required>
-
-                        <textarea placeholder="Message" name="message" required></textarea>
-
-                        <div class="captcha">
-                            <input type="text" placeholder="Answer" name="captcha" required>
-                            <input type="text" value="2 + 3 =" name="question" required readonly>
-                        </div>
-
-                        <input type="submit" value="Send">
-
-                    </form>
-
-
-                </ul>
-
-
-                <div class="small-6 large-4 columns">
-                    <br>
-                </div>
-            </div>
-
-
-
-        </div>
--->
-        <!--
-        <div class="row">
-            <div class="large-3 columns">
-                <br>
-            </div>
-            <div class="large-6 columns">
-                <h1>REach Out!!</h1>
-                <form action="">
-
-                    <input type="text" placeholder="Name" name="name" required>
-
-                    <input type="email" placeholder="Email" name="email" required>
-
-                    <textarea placeholder="Message" name="message" required></textarea>
-
-                    <div class="captcha">
-                        <input type="text" placeholder="Answer" name="captcha" required>
-                        <input type="text" value="2 + 3 =" name="question" required readonly>
-                    </div>
-
-                    <input type="submit" value="Send">
-
-                </form>
-                <br>
-            </div>
-            <div class="large-3 columns">
-                <br>
-            </div>
-        </div>
--->
 
 
 
