--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
     <div class="container">
 
         <div class="row" id="landing">
-
             <div class="overlay">
                 <div class="top-bar">
                     <div class="top-bar-left">
@@ -230,35 +229,34 @@
     <div class="footer">
         <div class="row">
             <div class="small-2 large-4 columns">
-                <br>
+
+                <a href="http://www.twitter.com/quarshie_arvid"> <i class="fa fa-twitter-square fa-3x tweet" aria-hidden="true"></i></a>
             </div>
             <div class="small-4 large-4 columns">
 
 
 
-                <a href="http://www.facebook.com/ArvidQuarshie"> <i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i></a>
 
-
-                <a href="http://www.twitter.com/quarshie_arvid"> <i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i></a>
-
-                <a href="http://www.github.com/ArvidQuarshie"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
 
 
                 <a href="http://arvidquarshie.github.io/blog/">
                     <i class="fa fa-newspaper-o fa-3x" aria-hidden="true"></i>
 
                 </a>
-                <a href="https://www.linkedin.com/in/arvid-quarshie-24a530120?trk=hp-identity-name"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
+
                 <br>
 
+                <!--
                 <i class="fa fa-copyright" aria-hidden="true"></i>2016
 
+-->
 
 
 
             </div>
             <div class="small-6 large-4 columns">
-                <br>
+
+                <a href="https://www.linkedin.com/in/arvid-quarshie-24a530120?trk=hp-identity-name"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
             </div>
         </div>
 
