--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
 
                 <div class="row hey">
 
-                    <div class="small-6 large-2 columns">
+                    <div class="small-0 large-2 columns">
                         <br>
                     </div>
-                    <div class="small-6 large-8 columns intro">
+                    <div class="small-12 large-8 columns intro">
                         <h1> Hi my name is Arvid Quarshie and Software Engineering is my passion.</h1></div>
-                    <div class="small-12 large-2 columns">
+                    <div class="small-0 large-2 columns">
                         <br>
                     </div>
 
@@ -78,8 +78,8 @@
     </div>
     <div class="portfolio" id="port">
         <h1>Portfolio</h1>
-        <div class="row">
-            <div class="small-2 large-4 columns">
+        <div class="row small-up-1 large-up-3 medium-up-2 columns">
+            <div class=" columns">
 
                 <figure class="snip1524">
                     <img src="./img/whiplash.png" alt="sample26" />
@@ -90,7 +90,7 @@
                     <a href="#"></a>
                 </figure>
             </div>
-            <div class="small-4 large-4 columns">
+            <div class=" columns">
                 <figure class="snip1524">
                     <img src="./img/AfricanImprint.png" />
                     <figcaption>
@@ -101,7 +101,7 @@
                 </figure>
 
             </div>
-            <div class="small-6 large-4 columns">
+            <div class="columns">
                 <figure class="snip1524">
                     <img src="./img/maps.jpg" />
                     <figcaption>
@@ -112,17 +112,9 @@
                 </figure>
 
             </div>
-        </div>
 
 
-
-
-
-    </div>
-    <div class="portfolio2" id="port">
-
-        <div class="row">
-            <div class="small-2 large-4 columns">
+            <div class=" columns">
 
                 <figure class="snip1524">
                     <img src="./img/cover.jpg" alt="sample26" />
@@ -133,7 +125,7 @@
                     <a href="#"></a>
                 </figure>
             </div>
-            <div class="small-4 large-4 columns">
+            <div class="columns">
                 <figure class="snip1524">
                     <img src="./img/crop.jpg" />
                     <figcaption>
@@ -144,7 +136,7 @@
                 </figure>
 
             </div>
-            <div class="small-6 large-4 columns">
+            <div class="columns">
                 <figure class="snip1524">
                     <img src="./img/android.png" alt="sample26" />
                     <figcaption>
@@ -155,6 +147,17 @@
                 </figure>
 
             </div>
+
+
+        </div>
+
+
+    </div>
+    <!--
+    <div class="portfolio2" id="port">
+
+        <div class="row">
+       
         </div>
 
 
@@ -162,6 +165,7 @@
 
 
     </div>
+-->
 
 
 
