--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <div class="row" id="landing">
             <div class="overlay">
-                <div class="top-bar">
+                <div class="top-bar small-12 medium-2 ">
                     <div class="top-bar-left">
                         <ul class="dropdown menu" data-dropdown-menu>
                             <li class="menu-text">ArvidQuarshie</li>
@@ -173,10 +173,10 @@
 
     <div class="skills" id="skil">
         <div class="row">
-            <div class="small-2 large-4 columns">
+            <div class="small-0 large-4 columns">
                 <br>
             </div>
-            <div class="small-4 large-4 columns">
+            <div class="small-12 large-4 columns">
                 <br>
                 <h1>Expertise</h1>
                 <br>
@@ -196,7 +196,7 @@
                 </ul>
 
             </div>
-            <div class="small-6 large-4 columns">
+            <div class="small-0 large-4 columns">
                 <br>
             </div>
         </div>
