--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <h2>Whiplash</h2>
 
                     </figcaption>
-                    <a href="#"></a>
+                    <a href="http://arvidquarshie.github.io/whiplash/"></a>
                 </figure>
             </div>
             <div class=" columns">
@@ -122,7 +122,7 @@
                         <h2>Music App</h2>
 
                     </figcaption>
-                    <a href="#"></a>
+                    <a href=" http://bit.ly/2ag1G7m "></a>
                 </figure>
             </div>
             <div class="columns">
@@ -132,7 +132,7 @@
                         <h2>Camera and Crop </h2>
 
                     </figcaption>
-                    <a href="#"></a>
+                    <a href="http://bit.ly/29ZAgN8"></a>
                 </figure>
 
             </div>
@@ -140,10 +140,10 @@
                 <figure class="snip1524">
                     <img src="./img/android.png" alt="sample26" />
                     <figcaption>
-                        <h2>Video Player</h2>
+                        <h2>Keebanda</h2>
 
                     </figcaption>
-                    <a href="#"></a>
+                    <a href="http://bit.ly/2a0XhSr"></a>
                 </figure>
 
             </div>
