--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
             </div>
             <div class=" columns">
                 <figure class="snip1524">
-                    <img src="./img/AfricanImprint.png" />
+                    <img src="./img/board.jpg" />
                     <figcaption>
-                        <h2>African Imprint</h2>
+                        <h2>Instinkt</h2>
 
                     </figcaption>
-                    <a href="#"></a>
+                    <a href="https://arvidquarshie.github.io/instinct/"></a>
                 </figure>
 
             </div>
