--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
             </div>
             <div class="columns">
                 <figure class="snip1524">
-                    <img src="./img/maps.jpg" />
+                    <img src="./img/android.png" alt="sample26" />
                     <figcaption>
-                        <h2>Google PLaces</h2>
+                        <h2>Camera</h2>
 
                     </figcaption>
-                    <a href="#"></a>
+                    <a href="https://appetize.io/app/7243q9f6web4ze2q1t1df6ypam?device=nexus5&scale=75&orientation=portrait&osVersion=6.0"></a>
                 </figure>
 
             </div>
