added portfolio stuff

--- a/index.html
+++ b/index.html
@@ -153,19 +153,45 @@
 
 
     </div>
-    <!--
-    <div class="portfolio2" id="port">
+    <div class="portfolio2 row small-up-1 medium-up-2 large-up-3 column">
+        <div class="columns">
+            <figure class="snip1524">
+                <img src="./img/android.png" alt="sample26" />
+                <figcaption>
+                    <h2>Keebanda</h2>
 
-        <div class="row">
-       
+                </figcaption>
+                <a href="http://bit.ly/2a0XhSr"></a>
+            </figure>
+
+        </div>
+        <div class="columns">
+            <figure class="snip1524">
+                <img src="./img/android.png" alt="sample26" />
+                <figcaption>
+                    <h2>Keebanda</h2>
+
+                </figcaption>
+                <a href="http://bit.ly/2a0XhSr"></a>
+            </figure>
+
+        </div>
+        <div class="columns">
+            <figure class="snip1524">
+                <img src="./img/android.png" alt="sample26" />
+                <figcaption>
+                    <h2>Keebanda</h2>
+
+                </figcaption>
+                <a href="http://bit.ly/2a0XhSr"></a>
+            </figure>
+
         </div>
 
 
 
 
-
     </div>
--->
 
 
 
