--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <figure class="snip1524">
                     <img src="./img/android.png" alt="sample26" />
                     <figcaption>
-                        <h2>Camera</h2>
+                        <h2>Email App</h2>
 
                     </figcaption>
                     <a href="https://appetize.io/app/7243q9f6web4ze2q1t1df6ypam?device=nexus5&scale=75&orientation=portrait&osVersion=6.0"></a>
@@ -156,12 +156,23 @@
     <div class="portfolio2 row small-up-1 medium-up-2 large-up-3 column">
         <div class="columns">
             <figure class="snip1524">
-                <img src="./img/android.png" alt="sample26" />
+                <img src="./img/showtime.png" alt="sample26" />
                 <figcaption>
-                    <h2>Keebanda</h2>
+                    <h2>Picasso</h2>
 
                 </figcaption>
-                <a href="http://bit.ly/2a0XhSr"></a>
+                <a href="http://bit.ly/2a1bmgN"></a>
+            </figure>
+
+        </div>
+        <div class="columns">
+            <figure class="snip1524">
+                <img src="./img/AfricanImprint.png" alt="sample26" />
+                <figcaption>
+                    <h2>Imprint</h2>
+
+                </figcaption>
+                <a href="http://imprints.bitballoon.com/"></a>
             </figure>
 
         </div>
@@ -169,18 +180,7 @@
             <figure class="snip1524">
                 <img src="./img/android.png" alt="sample26" />
                 <figcaption>
-                    <h2>Keebanda</h2>
-
-                </figcaption>
-                <a href="http://bit.ly/2a0XhSr"></a>
-            </figure>
-
-        </div>
-        <div class="columns">
-            <figure class="snip1524">
-                <img src="./img/android.png" alt="sample26" />
-                <figcaption>
-                    <h2>Keebanda</h2>
+                    <h2>Vintage</h2>
 
                 </figcaption>
                 <a href="http://bit.ly/2a0XhSr"></a>
@@ -192,6 +192,51 @@
 
 
     </div>
+
+
+    <div class="portfolio3 row small-up-1 medium-up-2 large-up-3 column">
+        <div class="columns">
+            <figure class="snip1524">
+                <img src="./img/showtime.png" alt="sample26" />
+                <figcaption>
+                    <h2>Sitati-Blog</h2>
+
+                </figcaption>
+                <a href="http://bit.ly/2a1bmgN"></a>
+            </figure>
+
+        </div>
+        <div class="columns">
+            <figure class="snip1524">
+                <img src="./img/AfricanImprint.png" alt="sample26" />
+                <figcaption>
+                    <h2>Google-Maps</h2>
+
+                </figcaption>
+                <a href="http://imprints.bitballoon.com/"></a>
+            </figure>
+
+        </div>
+        <div class="columns">
+            <figure class="snip1524">
+                <img src="./img/android.png" alt="sample26" />
+                <figcaption>
+                    <h2>Ocliney</h2>
+
+                </figcaption>
+                <a href="http://bit.ly/2a0XhSr"></a>
+            </figure>
+
+        </div>
+
+
+
+
+    </div>
+
+
+
+
 
 
 
@@ -231,20 +276,13 @@
     <div class="contacts" id="cont">
         <h2>Contact Form</h2>
 
-        <form action="https://formspree.io/arvidquarshie@gmail.com" method="POST">
+        <form action="https://formspree.io/arvidquarshie@gmail.com" method="POST" class="form1">
 
             <input type="text" placeholder="Name" name="name" required>
 
             <input type="email" placeholder="Email" name="email" required>
 
             <textarea placeholder="Message" name="message" required></textarea>
-
-            <!--
-            <div class="captcha">
-                <input type="text" placeholder="Answer" name="captcha" required>
-                <input type="text" value="2 + 3 =" name="question" required readonly>
-            </div>
--->
 
             <input type="submit" value="Send">
 
