--- a/index.html
+++ b/index.html
@@ -197,18 +197,18 @@
     <div class="portfolio3 row small-up-1 medium-up-2 large-up-3 column">
         <div class="columns">
             <figure class="snip1524">
-                <img src="./img/showtime.png" alt="sample26" />
+                <img src="./img/blog.png" alt="sample26" />
                 <figcaption>
-                    <h2>Sitati-Blog</h2>
+                    <h2>Blog</h2>
 
                 </figcaption>
-                <a href="http://bit.ly/2a1bmgN"></a>
+                <a href="http://sitati-blog.herokuapp.com/"></a>
             </figure>
 
         </div>
         <div class="columns">
             <figure class="snip1524">
-                <img src="./img/AfricanImprint.png" alt="sample26" />
+                <img src="./img/android.png" alt="sample26" />
                 <figcaption>
                     <h2>Google-Maps</h2>
 
