--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="top-bar small-12 medium-2 ">
                     <div class="top-bar-left">
                         <ul class="dropdown menu" data-dropdown-menu>
-                            <li class="menu-text">ArvidQuarshie</li>
+                            <!--                          <li class="menu-text">ArvidQuarshie</li>-->
                             <li>
                                 <a href="#port"><h5>Portfolio</h5></a>
                                 <ul class="menu vertical">
@@ -284,7 +284,8 @@
 
             <textarea placeholder="Message" name="message" required></textarea>
 
-            <input type="submit" value="Send">
+            <!--            <input type="submit" value="Send" >-->
+            <button type="button submit" class="success button">Send</button>
 
         </form>
 
@@ -296,11 +297,12 @@
 
     <div class="footer">
         <div class="row">
-            <div class="small-2 large-4 columns">
+            <div class="small-2 large-4 columns twit">
 
-                <a href="http://www.twitter.com/quarshie_arvid"> <i class="fa fa-twitter-square fa-3x tweet" aria-hidden="true"></i></a>
+                <a href="http://www.twitter.com/quarshie_arvid"> <i class="fa fa-twitter fa-3x" aria-hidden="true"></i>
+                </a>
             </div>
-            <div class="small-4 large-4 columns">
+            <div class="small-4 large-4 columns gitblog">
 
 
 
@@ -308,7 +310,8 @@
 
 
                 <a href="http://arvidquarshie.github.io/blog/">
-                    <i class="fa fa-newspaper-o fa-3x" aria-hidden="true"></i>
+                    <i class="fa fa-bars fa-3x" aria-hidden="true"></i>
+
 
                 </a>
 
@@ -322,7 +325,7 @@
 
 
             </div>
-            <div class="small-6 large-4 columns">
+            <div class="small-6 large-4 columns linked">
 
                 <a href="https://www.linkedin.com/in/arvid-quarshie-24a530120?trk=hp-identity-name"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
             </div>
