--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             <textarea placeholder="Message" name="message" required></textarea>
 
             <!--            <input type="submit" value="Send" >-->
-            <button type="button submit" class="success button">Send</button>
+            <button type="button submit" class="success button btncolor">Send</button>
 
         </form>
 
