--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
         <div class="row">
             <div class="small-2 large-4 columns twit">
 
-                <a href="http://www.twitter.com/quarshie_arvid"> <i class="fa fa-twitter fa-3x" aria-hidden="true"></i>
+                <a href="http://www.twitter.com/quarshie_arvid"> <i class="fa fa-twitter fa-3x twyt " aria-hidden="true"></i>
                 </a>
             </div>
             <div class="small-4 large-4 columns gitblog">
