--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
             </div>
             <div class="small-6 large-4 columns linked">
 
-                <a href="https://www.linkedin.com/in/arvid-quarshie-24a530120?trk=hp-identity-name"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
+                <a href="https://www.linkedin.com/in/arvid-quarshie-24a530120?trk=hp-identity-name"><i class="fa fa-linkedin fa-3x lynk" aria-hidden="true"></i></a>
             </div>
         </div>
 
