--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arvid Quarshie</title>
     <link rel="stylesheet" href="css/foundation.css">
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/main.css">
@@ -26,10 +27,12 @@
 
         <div class="row" id="landing">
             <div class="overlay">
+
+                <!--
                 <div class="top-bar small-12 medium-2 ">
                     <div class="top-bar-left">
                         <ul class="dropdown menu" data-dropdown-menu>
-                            <!--                          <li class="menu-text">ArvidQuarshie</li>-->
+                            <li class="menu-text">ArvidQuarshie</li>
                             <li>
                                 <a href="#port"><h5>Portfolio</h5></a>
                                 <ul class="menu vertical">
@@ -51,6 +54,30 @@
 
                 </div>
 
+-->
+
+
+                <nav class="nav">
+
+                    <a class="toggle-nav" href="#">&#9776;</a>
+
+                    <div class="nav-mobile">
+                        <ul class="left">
+                            <li><a href="#"> Home</a></li>
+                            <li><a href="#"><i class="fa fa-book"></i> Skills</a></li>
+                            <li><a href="#"><i class="fa fa-fire"></i> About</a></li>
+                        </ul>
+                        <ul class="right">
+                            <li>
+                                <a href="#"><i class="fa fa-user"></i> Contact</a>
+                            </li>
+                            <li>
+                                <!--                                <a href="#"><i class="fa fa-envelope"></i> Contact</a>-->
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+
 
                 <div class="row hey">
 
@@ -58,7 +85,8 @@
                         <br>
                     </div>
                     <div class="small-12 large-8 columns intro">
-                        <h1> Hi my name is Arvid Quarshie and Software Engineering is my passion.</h1></div>
+                        <h1> Hi my name is Arvid Quarshie and Software Engineering is my passion.</h1>
+                    </div>
                     <div class="small-0 large-2 columns">
                         <br>
                     </div>
@@ -247,7 +275,7 @@
             <div class="small-0 large-4 columns">
                 <br>
             </div>
-            <div class="small-12 large-4 columns">
+            <div class="small-12 medium-6 large-4 columns">
                 <br>
                 <h1>Expertise</h1>
                 <br>
@@ -338,6 +366,8 @@
     <script src="js/vendor/what-input.js"></script>
     <script src="js/vendor/foundation.js"></script>
     <script src="js/app.js"></script>
+    <script src="http://code.jquery.com/jquery-2.2.1.min.js"></script>
+    <script src="js/nav-mobile.js"></script>
 
 
 </body>
