--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                     <div class="nav-mobile">
                         <ul class="left">
                             <li><a href="#"> Home</a></li>
-                            <li><a href="#"><i class="fa fa-book"></i> Skills</a></li>
-                            <li><a href="#"><i class="fa fa-fire"></i> About</a></li>
+                            <li><a href="#"> Skills</a></li>
+                            <li><a href="#"> About</a></li>
                         </ul>
                         <ul class="right">
                             <li>
