--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         </ul>
                         <ul class="right">
                             <li>
-                                <a href="#"><i class="fa fa-user"></i> Contact</a>
+                                <a href="#"> Contact</a>
                             </li>
                             <li>
                                 <!--                                <a href="#"><i class="fa fa-envelope"></i> Contact</a>-->
